# hyphawebmanager

./: .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  hyphawebmanager-config.cmake
cmake/: 3rdParty.cmake  CompileOptions.cmake
deploy/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt
source/hyphawebmanager/: CMakeLists.txt
source/hyphawebmanager/include/: Configuration.h  FileHandler.h  RequestHandlerFactory.h  ResourceHandler.h  hyphawebmanager.h  mime.h
source/hyphawebmanager/include/api/: ApiHandler.h  ConnectionsHandler.h  HandlersHandler.h  PluginsHandler.h  UriParser.h
source/hyphawebmanager/resources/js/: hyphaapi.js
source/hyphawebmanager/source/: AccessDeniedHandler.cpsp  ConnectionsPage.cpsp  FileHandler.cpp  HandlerInstancePage.cpsp  HandlersPage.cpsp  Index.cpsp  NotFoundHandler.cpsp  PluginInstancePage.cpsp  PluginsPage.cpsp  RequestHandlerFactory.cpp  ResourceHandler.cpp  hyphawebmanager.cpp  main.cpp  mime.cpp
source/hyphawebmanager/source/api/: ApiHandler.cpp  ConnectionsHandler.cpp  HandlersHandler.cpp  PluginsHandler.cpp  UriParser.cpp
source/tests/: CMakeLists.txt
source/tests/hyphawebmanager-test/: CMakeLists.txt  hyphawebmanager_test.cpp  main.cpp
